--- a/images/tiles/tiles.yml
+++ b/images/tiles/tiles.yml
@@ -1,150 +1,151 @@
-images/misc/blur-circle.png: [0,0,0,128,128]
-images/misc/glitch2.png: [1,128,0,128,128]
-images/misc/sky-blur.png: [2,256,0,128,128]
-images/misc/mirror3.png: [3,384,0,128,128]
-images/misc/bar2.png: [4,512,0,128,128]
-images/misc/mirror.png: [5,640,0,128,128]
-images/car/antenna/drilled.png: [6,768,0,128,128]
-images/car/antenna/taped.png: [7,896,0,128,128]
-images/car/antenna/none.png: [8,1024,0,128,128]
-images/bollard/fr.png: [9,1152,0,64,64]
-images/bollard/ad.png: [10,1216,0,128,128]
-images/bollard/is.png: [11,1344,0,64,64]
-sign/pedestrian/0.png: [12,1408,0,127,128]
-sign/pedestrian/3.png: [13,0,128,128,128]
-sign/pedestrian/4.png: [14,128,128,128,128]
-sign/pedestrian/5.png: [15,256,128,128,128]
-sign/pedestrian/es.png: [29,475,256,100,100]
-sign/pedestrian/br.png: [17,484,128,128,128]
-sign/pedestrian/ec.png: [18,612,128,128,128]
-sign/pedestrian/za.png: [19,740,128,128,112]
-sign/pedestrian/ar.png: [20,868,128,128,128]
-sign/pedestrian/at.png: [21,996,128,128,128]
-sign/pedestrian/be.png: [22,1124,128,127,128]
-sign/pedestrian/bg.png: [23,1251,128,128,128]
-sign/pedestrian/ca.png: [24,1379,128,104,128]
-sign/pedestrian/ch.png: [25,0,256,91,128]
-sign/pedestrian/cl.png: [26,91,256,128,128]
-sign/pedestrian/co.png: [27,219,256,128,128]
-sign/pedestrian/dk.png: [28,347,256,128,128]
-sign/pedestrian/gr.png: [30,575,256,128,128]
-sign/pedestrian/ie.png: [31,703,256,128,128]
-sign/pedestrian/is.png: [32,831,256,128,128]
-sign/pedestrian/no.png: [33,959,256,128,128]
-sign/pedestrian/pl.png: [34,1087,256,128,128]
-sign/pedestrian/rs.png: [35,1215,256,128,128]
-sign/pedestrian/se.png: [36,1343,256,128,128]
-sign/residential/model1.png: [37,0,384,128,128]
-sign/residential/model2.png: [38,128,384,128,128]
-sign/residential/ru.svg: [62,0,640,85,128]
-sign/residential/fr.png: [51,256,512,128,128]
-sign/residential/lv.png: [56,800,512,128,101]
-sign/residential/at.svg: [42,597,384,128,102]
-sign/residential/be.svg: [43,725,384,128,86]
-sign/residential/ch.svg: [44,853,384,128,92]
-sign/residential/cz.jpg: [45,981,384,128,96]
-sign/residential/de.svg: [46,1109,384,128,85]
-sign/residential/dk.svg: [47,1237,384,102,128]
-sign/residential/ee.png: [48,1339,384,128,100]
-sign/residential/es.svg: [49,0,512,128,85]
-sign/residential/fi.svg: [50,128,512,128,91]
-sign/residential/gb.svg: [52,384,512,102,128]
-sign/residential/gr.svg: [53,486,512,128,64]
-sign/residential/ie.png: [54,614,512,58,128]
-sign/residential/it.svg: [55,672,512,128,128]
-sign/residential/nl.svg: [57,928,512,128,85]
-sign/residential/no.svg: [58,1056,512,96,128]
-sign/residential/pl.svg: [59,1152,512,128,86]
-sign/residential/ro.svg: [60,1280,512,98,128]
-sign/residential/rs.svg: [61,1378,512,128,85]
-sign/residential/se.svg: [63,85,640,128,92]
-sign/residential/sk.png: [64,213,640,128,96]
-sign/residential/ua.gif: [65,341,640,86,128]
-sign/child/hr.png: [79,635,768,128,128]
-sign/child/fi.png: [77,384,768,128,128]
-sign/child/cz.png: [72,1195,640,128,128]
-sign/cycle/bg.png: [71,1067,640,128,128]
-sign/cycle/at.png: [70,939,640,128,128]
-sign/cycle/cz.png: [73,1323,640,128,128]
-sign/child/de.png: [74,0,768,128,128]
-sign/cycle/dk.png: [75,128,768,128,128]
-sign/cycle/ee.png: [76,256,768,128,128]
-sign/cycle/fi.png: [78,512,768,123,123]
-sign/cycle/hr.png: [80,763,768,128,128]
-sign/child/is.png: [81,891,768,128,128]
-sign/cycle/se.png: [89,304,896,128,128]
-sign/cycle/lt.png: [83,1147,768,128,128]
-sign/cycle/lv.png: [84,1275,768,128,128]
-sign/child/mk.png: [85,1403,768,128,128]
-sign/cycle/mk.png: [86,0,896,128,128]
-sign/cycle/no1.png: [87,128,896,128,128]
-sign/cycle/no2.png: [88,256,896,48,50]
-sign/child/sk.png: [90,432,896,128,128]
-sign/cycle/sk.png: [91,560,896,128,128]
-images/road/europe.png: [92,688,896,128,128]
-images/road/america.png: [93,816,896,128,128]
-images/road/africa.png: [94,944,896,128,128]
-images/road/uy.png: [95,1072,896,128,128]
-images/road/dk.png: [96,1200,896,128,128]
-images/road/no.png: [97,1328,896,128,128]
-images/road/se.png: [98,0,1024,128,128]
-images/road/nz.png: [99,128,1024,128,128]
-images/road/be.png: [100,256,1024,128,128]
-images/road/comb.png: [101,384,1024,128,128]
-images/road/long-space.png: [102,512,1024,128,128]
-images/road/border-white-black.png: [103,640,1024,128,128]
-images/road/border-yellow-black.png: [104,768,1024,128,128]
-images/road/border-white-red.png: [105,896,1024,128,128]
-images/poll/nl.png: [117,1024,1152,128,128]
-images/poll/lv.png: [123,384,1280,128,128]
-images/poll/be.png: [108,1280,1024,128,128]
-images/poll/ch.png: [109,0,1152,128,128]
-images/poll/ee.png: [110,128,1152,128,128]
-images/poll/fi.png: [112,384,1152,128,128]
-images/poll/hr.png: [122,256,1280,128,128]
-images/poll/lt.png: [114,640,1152,128,128]
-images/poll/no.png: [118,1152,1152,128,128]
-images/poll/pl.png: [119,1280,1152,128,128]
-images/poll/se.png: [121,128,1280,128,128]
-images/sign/stop/bg.png: [124,512,1280,128,128]
-images/sign/stop/mx.png: [125,640,1280,128,128]
-images/sign/stop/co.png: [126,768,1280,128,128]
-images/sign/misc/black-back.svg: [127,896,1280,128,128]
-images/sign/misc/light-back.svg: [128,1024,1280,128,128]
-images/sign/flat.svg: [129,1152,1280,128,128]
-images/sign/not-flat.svg: [130,1280,1280,128,128]
-images/sign/nopark/white-lines.svg: [131,0,1408,128,128]
-images/sign/nopark/no-white-lines.svg: [132,128,1408,128,128]
-images/sign/forbidden/white-border.png: [133,256,1408,128,128]
-images/sign/forbidden/no-border.png: [134,384,1408,128,128]
-images/misc/tree.png: [135,512,1408,128,128]
-images/misc/tree2.png: [136,640,1408,128,128]
-images/electrical/hu-like.png: [137,768,1408,128,128]
-images/electrical/lv-like.png: [138,896,1408,128,128]
-images/electrical/pl3.png: [139,1024,1408,128,128]
-images/electrical/tri.png: [140,1152,1408,128,128]
-images/electrical/white-foot.png: [141,1280,1408,128,128]
-images/electrical/parallelepipedic.svg: [142,0,1536,128,128]
-images/electrical/cylindric.svg: [143,128,1536,128,128]
-images/nordic3.png: [144,256,1536,64,64]
-images/sign/nopriority/bg.png: [145,320,1536,128,128]
-images/sign/nopriority/fi.png: [146,448,1536,128,128]
-images/sign/nopriority/hr.png: [147,576,1536,64,64]
-images/sign/nopriority/is.png: [148,640,1536,128,128]
-images/sign/nopriority/me.png: [149,768,1536,128,128]
-images/sign/nopriority/mk.png: [150,896,1536,64,64]
-images/sign/nopriority/no.png: [151,960,1536,128,128]
-images/sign/nopriority/pl.png: [152,1088,1536,108,109]
-images/sign/nopriority/se.png: [153,1196,1536,64,64]
-images/sign/nopriority/si.png: [154,1260,1536,128,128]
-images/sign/nopark/bg.png: [155,1388,1536,125,128]
-images/sign/nopark/dk.png: [156,0,1664,128,128]
-images/sign/nopark/lv.png: [157,128,1664,128,128]
-images/sign/nopark/pl.png: [158,256,1664,128,128]
-images/sign/circular/fi.png: [159,384,1664,128,128]
-images/sign/circular/hr.png: [160,512,1664,64,64]
-images/sign/circular/is.png: [161,576,1664,128,128]
-images/sign/circular/no.png: [162,704,1664,128,128]
-images/sign/circular/se.png: [163,832,1664,64,64]
-images/sign/circular/si.png: [164,896,1664,128,128]
-images/sign/circular/sk.png: [165,1024,1664,128,128]
+sign/pedestrian/pl.png: [0,0,0,128,128]
+sign/residential/fi.svg: [1,128,0,128,91]
+sign/cycle/fr.svg: [2,256,0,128,128]
+images/sign/circular/sk.png: [3,384,0,128,128]
+images/sign/nopriority/hr.png: [4,512,0,64,64]
+images/sign/nopark/bg.png: [5,576,0,125,128]
+images/poll/hr.png: [6,701,0,128,128]
+images/misc/blur-circle.png: [7,829,0,128,128]
+images/misc/glitch2.png: [8,957,0,128,128]
+images/misc/sky-blur.png: [9,1085,0,128,128]
+images/misc/mirror3.png: [10,1213,0,128,128]
+images/misc/bar2.png: [11,1341,0,128,128]
+images/misc/mirror.png: [12,0,128,128,128]
+images/car/antenna/drilled.png: [13,128,128,128,128]
+images/car/antenna/taped.png: [14,256,128,128,128]
+images/car/antenna/none.png: [15,384,128,128,128]
+images/bollard/fr.png: [16,512,128,64,64]
+images/bollard/ad.png: [17,576,128,128,128]
+images/bollard/is.png: [18,704,128,64,64]
+sign/pedestrian/0.png: [19,768,128,127,128]
+sign/pedestrian/3.png: [20,895,128,128,128]
+sign/pedestrian/4.png: [21,1023,128,128,128]
+sign/pedestrian/5.png: [22,1151,128,128,128]
+sign/pedestrian/es.png: [23,1279,128,100,100]
+sign/pedestrian/br.png: [24,1379,128,128,128]
+sign/pedestrian/ec.png: [25,0,256,128,128]
+sign/pedestrian/za.png: [26,128,256,128,112]
+sign/pedestrian/ar.png: [27,256,256,128,128]
+sign/pedestrian/at.png: [28,384,256,128,128]
+sign/pedestrian/be.png: [29,512,256,127,128]
+sign/pedestrian/bg.png: [30,639,256,128,128]
+sign/pedestrian/ca.png: [31,767,256,104,128]
+sign/pedestrian/ch.png: [32,871,256,91,128]
+sign/pedestrian/cl.png: [33,962,256,128,128]
+sign/pedestrian/co.png: [34,1090,256,128,128]
+sign/pedestrian/dk.png: [35,1218,256,128,128]
+sign/pedestrian/gr.png: [36,1346,256,128,128]
+sign/pedestrian/ie.png: [37,0,384,128,128]
+sign/pedestrian/is.png: [38,128,384,128,128]
+sign/pedestrian/no.png: [39,256,384,128,128]
+sign/pedestrian/rs.png: [40,384,384,128,128]
+sign/pedestrian/se.png: [41,512,384,128,128]
+sign/residential/model1.png: [42,640,384,128,128]
+sign/residential/model2.png: [43,768,384,128,128]
+sign/residential/ru.svg: [44,896,384,85,128]
+sign/residential/fr.png: [45,981,384,128,128]
+sign/residential/lv.png: [46,1109,384,128,101]
+sign/residential/at.svg: [47,1237,384,128,102]
+sign/residential/be.svg: [48,1365,384,128,86]
+sign/residential/ch.svg: [49,0,512,128,92]
+sign/residential/cz.jpg: [50,128,512,128,96]
+sign/residential/de.svg: [51,256,512,128,85]
+sign/residential/dk.svg: [52,384,512,102,128]
+sign/residential/ee.png: [53,486,512,128,100]
+sign/residential/es.svg: [54,614,512,128,85]
+sign/residential/gb.svg: [55,742,512,102,128]
+sign/residential/gr.svg: [56,844,512,128,64]
+sign/residential/ie.png: [57,972,512,58,128]
+sign/residential/it.svg: [58,1030,512,128,128]
+sign/residential/nl.svg: [59,1158,512,128,85]
+sign/residential/no.svg: [60,1286,512,96,128]
+sign/residential/pl.svg: [61,1382,512,128,86]
+sign/residential/ro.svg: [62,0,640,98,128]
+sign/residential/rs.svg: [63,98,640,128,85]
+sign/residential/se.svg: [64,226,640,128,92]
+sign/residential/sk.png: [65,354,640,128,96]
+sign/residential/ua.gif: [66,482,640,86,128]
+sign/child/hr.png: [67,568,640,128,128]
+sign/child/fi.png: [68,696,640,128,128]
+sign/child/cz.png: [69,824,640,128,128]
+sign/cycle/bg.png: [70,952,640,128,128]
+sign/cycle/at.png: [71,1080,640,128,128]
+sign/cycle/cz.png: [72,1208,640,128,128]
+sign/child/de.png: [73,1336,640,128,128]
+sign/cycle/dk.png: [74,0,768,128,128]
+sign/cycle/ee.png: [75,128,768,128,128]
+sign/cycle/fi.png: [76,256,768,123,123]
+sign/cycle/hr.png: [77,379,768,128,128]
+sign/child/is.png: [78,507,768,128,128]
+sign/cycle/se.png: [79,635,768,128,128]
+sign/cycle/lt.png: [80,763,768,128,128]
+sign/cycle/lv.png: [81,891,768,128,128]
+sign/child/mk.png: [82,1019,768,128,128]
+sign/cycle/mk.png: [83,1147,768,128,128]
+sign/cycle/no1.png: [84,1275,768,128,128]
+sign/cycle/no2.png: [85,1403,768,48,50]
+sign/child/sk.png: [86,0,896,128,128]
+sign/cycle/sk.png: [87,128,896,128,128]
+images/road/europe.png: [88,256,896,128,128]
+images/road/america.png: [89,384,896,128,128]
+images/road/africa.png: [90,512,896,128,128]
+images/road/uy.png: [91,640,896,128,128]
+images/road/dk.png: [92,768,896,128,128]
+images/road/no.png: [93,896,896,128,128]
+images/road/se.png: [94,1024,896,128,128]
+images/road/nz.png: [95,1152,896,128,128]
+images/road/be.png: [96,1280,896,128,128]
+images/road/comb.png: [97,0,1024,128,128]
+images/road/long-space.png: [98,128,1024,128,128]
+images/road/border-white-black.png: [99,256,1024,128,128]
+images/road/border-yellow-black.png: [100,384,1024,128,128]
+images/road/border-white-red.png: [101,512,1024,128,128]
+images/poll/nl.png: [102,640,1024,128,128]
+images/poll/lv.png: [103,768,1024,128,128]
+images/poll/be.png: [104,896,1024,128,128]
+images/poll/ch.png: [105,1024,1024,128,128]
+images/poll/ee.png: [106,1152,1024,128,128]
+images/poll/fi.png: [107,1280,1024,128,128]
+images/poll/lt.png: [108,0,1152,128,128]
+images/poll/no.png: [109,128,1152,128,128]
+images/poll/pl.png: [110,256,1152,128,128]
+images/poll/se.png: [111,384,1152,128,128]
+images/sign/stop/bg.png: [112,512,1152,128,128]
+images/sign/stop/mx.png: [113,640,1152,128,128]
+images/sign/stop/co.png: [114,768,1152,128,128]
+images/sign/misc/black-back.svg: [115,896,1152,128,128]
+images/sign/misc/light-back.svg: [116,1024,1152,128,128]
+images/sign/flat.svg: [117,1152,1152,128,128]
+images/sign/not-flat.svg: [118,1280,1152,128,128]
+images/sign/nopark/white-lines.svg: [119,0,1280,128,128]
+images/sign/nopark/no-white-lines.svg: [120,128,1280,128,128]
+images/sign/forbidden/white-border.png: [121,256,1280,128,128]
+images/sign/forbidden/no-border.png: [122,384,1280,128,128]
+images/misc/tree.png: [123,512,1280,128,128]
+images/misc/tree2.png: [124,640,1280,128,128]
+images/electrical/hu-like.png: [125,768,1280,128,128]
+images/electrical/lv-like.png: [126,896,1280,128,128]
+images/electrical/pl3.png: [127,1024,1280,128,128]
+images/electrical/tri.png: [128,1152,1280,128,128]
+images/electrical/white-foot.png: [129,1280,1280,128,128]
+images/electrical/parallelepipedic.svg: [130,0,1408,128,128]
+images/electrical/cylindric.svg: [131,128,1408,128,128]
+images/nordic3.png: [132,256,1408,64,64]
+images/sign/nopriority/bg.png: [133,320,1408,128,128]
+images/sign/nopriority/fi.png: [134,448,1408,128,128]
+images/sign/nopriority/is.png: [135,576,1408,128,128]
+images/sign/nopriority/me.png: [136,704,1408,128,128]
+images/sign/nopriority/mk.png: [137,832,1408,64,64]
+images/sign/nopriority/no.png: [138,896,1408,128,128]
+images/sign/nopriority/pl.png: [139,1024,1408,108,109]
+images/sign/nopriority/se.png: [140,1132,1408,64,64]
+images/sign/nopriority/si.png: [141,1196,1408,128,128]
+images/sign/nopark/dk.png: [142,1324,1408,128,128]
+images/sign/nopark/lv.png: [143,0,1536,128,128]
+images/sign/nopark/pl.png: [144,128,1536,128,128]
+images/sign/circular/fi.png: [145,256,1536,128,128]
+images/sign/circular/hr.png: [146,384,1536,64,64]
+images/sign/circular/is.png: [147,448,1536,128,128]
+images/sign/circular/no.png: [148,576,1536,128,128]
+images/sign/circular/se.png: [149,704,1536,64,64]
+images/sign/circular/si.png: [150,768,1536,128,128]
